# image-processing-cpp

./: CMakeLists.txt  README.md
src/: Convolution.cpp  Convolution.h  DecodeMessage.cpp  EdgeDetector.cpp  EncodeMessage.cpp  ImageMatrix.cpp  ImageMatrix.h  ImageProcessor.cpp  ImageSharpening.cpp  main.cpp
